cabal-version:      3.0

name:               Joke
version:            0.1.0
description:        See README on GitLab at <https://github.com/frankhjung/haskell-weather#readme>
synopsis:           example https request to read weather forecast
homepage:           https://github.com/frankhjung/haskell-weather#readme
bug-reports:        https://github.com/frankhjung/haskell-weather/issues
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2023 Frank H Jung
license:            BSD-3-Clause
license-file:       LICENSE
category:           education
extra-source-files: README.md

source-repository   head
  type:             git
  location:         https://github.com/frankhjung/haskell-weather

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Joke
  build-depends:    base >= 4 && < 5
                  , aeson >= 2.0.3.0 && < 2.1
                  , bytestring >= 0.10.12.1 && < 0.11
                  , http-client >= 0.7.13.1 && < 0.8
                  , http-client-tls >= 0.3.6.1 && < 0.4
                  , text >= 1.2.5.0 && < 1.3
  ghc-options:      -Wall

executable          main
  hs-source-dirs:   app
                  , src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4 && < 5
                  , aeson
                  , bytestring
                  , http-client
                  , http-client-tls
                  , text
  other-modules:    Joke
  ghc-options:      -Wall

test-suite          test
  hs-source-dirs:   test
                  , src
  main-is:          Spec.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , aeson
                  , bytestring
                  , hspec
                  , http-client
                  , http-client-tls
                  , text
  other-modules:    Joke
  ghc-options:      -Wall
