cabal-version:      2.4
name:               Jokes
version:            0.4.0
description:
  See README on GitLab at <https://github.com/frankhjung/haskell-jokes#readme>

synopsis:           example https request to read from jokes api
homepage:           https://github.com/frankhjung/haskell-jokes#readme
bug-reports:        https://github.com/frankhjung/haskell-jokes/issues
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2023-2024 Frank H Jung
license:            BSD-3-Clause
license-file:       LICENSE
category:           education
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/frankhjung/haskell-jokes

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Jokes
  build-depends:
    , aeson            ^>=2.2
    , base             ^>=4.17
    , bytestring       ^>=0.11
    , http-client      ^>=0.7
    , http-client-tls  ^>=0.3
    , text             ^>=2.0

  ghc-options:      -Wall

executable main
  hs-source-dirs:   app src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    , aeson            ^>=2.2
    , base             ^>=4.17
    , bytestring       ^>=0.11
    , http-client      ^>=0.7
    , http-client-tls  ^>=0.3
    , text             ^>=2.0

  other-modules:    Jokes
  ghc-options:      -Wall

test-suite test
  hs-source-dirs:     test src
  main-is:            TestsSpec.hs
  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    OverloadedStrings

  type:               exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , aeson            ^>=2.2
    , base             ^>=4.17
    , bytestring       ^>=0.11
    , hspec            ^>=2.11
    , http-client      ^>=0.7
    , http-client-tls  ^>=0.3
    , text             ^>=2.0

  other-modules:      Jokes
  ghc-options:        -Wall -Wno-missing-home-modules
